name:          colchis
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      Network
build-type:    Simple
cabal-version: >= 1.10
Synopsis:      Rudimentary JSON-RPC 2.0 client over raw TCP. 
Description:   Rudimentary JSON-RPC 2.0 client over raw TCP.

Extra-Source-Files:
    README.md
    CHANGELOG

Library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: 
        Network.Colchis
    other-modules: 
    build-depends:         
        base >= 4.4 && < 5,
        transformers >= 0.2 && < 0.5,
        transformers-compat == 0.3.*,
        free >= 4.2 && < 5,
        bifunctors >= 4.1 && < 5,
        async >= 2.0.1 && < 2.1,
        process >= 1.2.0 && < 1.3,
        pipes >= 4.1.2 && < 4.2,
        pipes-bytestring >= 2.1.0 && < 2.2,
        pipes-text >= 0.0.0.10 && < 0.0.2,
        pipes-aeson >= 0.4 && < 0.5,
        aeson >=0.7 && < 0.9,
        text >= 0.11.2 && < 1.2,
        pipes-concurrency >= 2.0.2 && < 3,
        pipes-safe >= 2.2.0 && < 3,
        pipes-parse >=3.0.1 && <3.1,
        exceptions >= 0.6.0 && < 0.7,
        void >= 0.6 && < 0.7,
        containers >= 0.4,
        semigroups >= 0.15 && < 0.16,
        conceit >= 0.1 && < 0.2

Source-repository head
    type:     git
    location: https://github.com/danidiaz/colchis.git

